bk_ida/gccida/g1/end_final
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/end_final/src/final.c:737:35: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), name); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/end_final/src/final.c:740:35: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), name); 
                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/end_final/src/obj/final.o] Error 1
